# btcpool-go-modules-ABANDONED

./: .gitignore  JSONRPC.go  LICENSE  Main.go  README.md  SessionIDManager.go  StratumSession.go
chainSwitcher/: Dockerfile  README.md  build.sh  config.default.json  entrypoint.sh  main.go  utils.go
initNiceHash/: Dockerfile  README.md  go.mod  go.sum  main.go
initUserCoin/: APIError.go  HTTPAPI.go  InitUserCoin.go  Main.go  README.md  UserAutoReg.go  UserListJSON.cpp  UserListJSON.h  config.default.json
install/cfg-generator/: chainSwitcher.php  userChainAPIServer.php
mergedMiningProxy/: AuxJobMaker.go  AuxPowData.go  AuxPowData_test.go  ChainRPC.go  ChainSlot.go  ConfigData.go  DbConnection.go  LitecoinScrypt.go  Main.go  Main_test.go  ProxyRPC.go  README.md  RPC.go  RPCCall.go  Utils.go  Utils_test.go  config.default.json  movefile.sh
mergedMiningProxy/hash/: byte32.go  hash.go  hash_test.go  licence.txt
mergedMiningProxy/merkle/: merkle.go  merkle_test.go
sharelogAnalyzer/: ConfigData.go  Main.go  MiningIPStatistics.go  Share.go  Utils.go  config.default.json
stratumSwitcher/: CMakeLists.txt  ConfigData.go  Errors.go  JSONRPC.go  Main.go  README.md  SessionIDManager.go  SessionIDManager_test.go  StratumError.go  StratumSession.go  StratumSessionManager.go  Upgradable.go  Utils.go  Utils_linux.go  Utils_windows.go  ZookeeperManager.go  config.default.json  supervisor-switcher.conf
switcherAPIServer/: APIError.go  CronJob.go  HTTPAPI.go  Main.go  README.md  config.default.json  config.json
userChainAPIServer/: APIError.go  ConfigData.go  Dockerfile  HTTPAPI.go  InitUserCoin.md  Main.go  README.md  SwitcherAPIServer.md  UserAutoReg.go  UserChainManager.go  Zookeeper.go  config.default.json  entrypoint.sh
userChainAPIServer/initUserCoin/: APIError.go  HTTPAPI.go  InitUserCoin.go  Main.go  UserAutoReg.go  UserListJSON.cpp  UserListJSON.h  Zookeeper.go  config.default.json
userChainAPIServer/switcherAPIServer/: APIError.go  CronJob.go  HTTPAPI.go  Main.go  README.md  Zookeeper.go
(+1 files in other folders)
